# Maya_CMake_Plugins

./: CMakeLists.txt  CMakePresets.json  README.md
SDK/Autodesk_Maya_2018_7_Update_DEVKIT_Windows/: sdk下载路径.txt
cmake/: FindMaya.cmake
sources/circleNode/: CMakeLists.txt  circle_test.cpp
sources/helloWorldCmd/: CMakeLists.txt  helloWorldCmd.cpp
